fixed minor bug with handling overflow

--- a/garden/public/main.css
+++ b/garden/public/main.css
@@ -602,6 +602,14 @@ video {
   margin-top: 2rem;
 }
 
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
 .flex {
   display: flex;
 }
@@ -634,12 +642,44 @@ video {
   height: 100vh;
 }
 
+.h-\[120px\] {
+  height: 120px;
+}
+
+.h-\[150px\] {
+  height: 150px;
+}
+
+.h-\[160px\] {
+  height: 160px;
+}
+
 .max-h-32 {
   max-height: 8rem;
 }
 
 .max-h-\[120px\] {
   max-height: 120px;
+}
+
+.max-h-\[140px\] {
+  max-height: 140px;
+}
+
+.max-h-\[130px\] {
+  max-height: 130px;
+}
+
+.max-h-\[150px\] {
+  max-height: 150px;
+}
+
+.max-h-\[160px\] {
+  max-height: 160px;
+}
+
+.min-h-\[160px\] {
+  min-height: 160px;
 }
 
 .w-28 {
@@ -912,6 +952,10 @@ video {
 
 .pt-8 {
   padding-top: 2rem;
+}
+
+.pt-3 {
+  padding-top: 0.75rem;
 }
 
 .text-center {
